Add a scarier warning about the Scala Compiler changes.
+review REVIEW-5829
- This will make it clearer to users who have broken builds how
  to increase the memory for those builds.